--- a/2019/01.md
+++ b/2019/01.md
@@ -129,3 +129,127 @@ Aspects hook 类方法的正确姿势
 
 
 
+
+
+Xcode更新输入账号密码，账号却不是自己的
+----------
+**作者**: [Lefe_x](https://weibo.com/u/5953150140)
+
+更新Xcode的时候，需要输入Apple账号和密码，以前一直正常，这次更新的时候遇到一个问题。更新的时候提示输入账号和密码，可是账号并不是我自己的账号，关键这个账号也不能修改，只能输入密码。刚开始以为是系统的问题，把Mac系统升级后发现并不管用。最后想了下，我电脑上的Xcode安装的时候是直接和同事拷贝的，那么这个账号应该就是他的。直接和同事要账号密码并不合适。
+
+最后找到一个解决办法：
+
+```
+在应用中找到Xcode -> 显示包内容 -> 找到 _MASReceipt 文件夹，把它删除 -> 更新即可。
+```
+
+
+
+Framework 中混合编程时 umbrella header 设置注意事项
+--------
+**作者**: [南峰子](https://weibo.com/3321824014)
+
+Swift 和 Objective-C 混合编程，当需要在 Swift 中调用 Objective-C 代码时，在 App Target 中，我们依托的是 `Objective-C Bridging Header`，而在 Framework Target 中，依托的是 `unbrella header` ，即 Framework 的主头文件。我们需要做如下配置：
+
+* 在 Build Setting -> Packaging 中将 Defines Module 设置为 YES，如下图所示；
+
+![](https://github.com/awesome-tips/iOS-Tips/blob/master/images/2019/01/6-1.png)
+
+* 在 unbrella header  中导入需要暴露的 Objective-C 头文件
+
+如果这样配置后，发现编译器还是报 `Use of undeclared type '**'` 错误，则确认以下两点：
+
+* unbrella header 和需要暴露的 Objective-C 头文件是否包含在 Framework Target 中，如下图所示；
+
+![](https://github.com/awesome-tips/iOS-Tips/blob/master/images/2019/01/6-1.png)
+
+* 在 Build Phases -> Headers 中，将 unbrella header 和需要暴露的 Objective-C 头文件放置在 Public 区域中，所下图所示!
+
+![](https://github.com/awesome-tips/iOS-Tips/blob/master/images/2019/01/6-1.png)
+
+这样确认后，基本就没什么问题了。
+
+
+
+
+This block declaration is not a prototype 编译警告处理
+--------
+**作者**: [南峰子](https://weibo.com/3321824014)
+
+在 Objective-C 中，经常会使用到 block，在声明 block 时，如果没有参数，我们经常是会将参数省略，而不写 void，如
+
+```c
+typedef void (^Completion)();
+```
+
+特别是在老代码中，这样的情况应该是多数。
+
+而到了 Xcode 9 之后，编译器对这样的代码给出一个警告：
+
+```c
+This block declaration is not a prototype
+```
+
+即编译器希望你把参数 void 给加上。
+
+最直接的方法当然是声明 block 时，对无参的 block 加上 void，但对于老代码或者是第三方的代码，我想很少有人想去改。如果想过滤这种烦人的提示又想偷懒，那就只能借助编译器配置了，如下图，将 Strict Prototypes 的值设置为 NO，警告就不会再出现了。
+
+![](https://github.com/awesome-tips/iOS-Tips/blob/master/images/2019/01/5-1.png)
+
+
+
+
+使用 strong 而不是 assign 修饰 dispatch 对象
+--------
+**作者**: NotFound--
+
+当运行系统是在 iOS6 以下时，是需要通过 `dispatch_retain` 和 `dispatch_release` 来管理 `dispatch queue` 的生命周期的，此时应该使用 `assign` 来修饰 `dispatch_queue_t` 类型的对象。在 iOS6 及以后是通过 ARC 来管理 `dispatch queue` 对象的生命周期的，所以应该使用 strong 来修饰 `dispatch_queue_t` 类型的对象。这里以支持 iOS5 系统的 `SDWebImage(version:3.7.6)` 的代码举例：
+
+```objc
+#if OS_OBJECT_USE_OBJC
+    #define SDDispatchQueueSetterSementics strong
+#else
+#define SDDispatchQueueSetterSementics assign
+#endif
+
+@property (SDDispatchQueueSetterSementics, nonatomic) dispatch_queue_t barrierQueue;
+```
+
+`OS_OBJECT_USE_OBJC` 是一个编译器选项，当我们工程里面设置的 `Deployment target` 大于或等于 iOS 6 时，`OS_OBJECT_USE_OBJC` 的值会是 1，否则会是 0。因为我们现在的 app 普遍都是支持到 iOS9 或者 iOS8，所以 `dispatch_queue_t` 类型的对象都是使用 ARC 来进行管理的，我们使用 strong 来修饰就好了。
+
+【示例】
+
+在美团近期开源的 `UI` 渲染框架 `Graver` 中也发现，错误得使用 assign 来修饰 `dispatch_queue_t` 类型的属性（如图一所示），
+
+![](https://github.com/awesome-tips/iOS-Tips/blob/master/images/2019/01/7-1.jpg)
+
+对 Graver 框架实际测试时，发现将一个 dispatch_queue_t 类型的局部变量赋值给对 assign 修饰的 `dispatch_queue_t` 后（如图二所示），
+
+![](https://github.com/awesome-tips/iOS-Tips/blob/master/images/2019/01/7-2.jpg)
+
+会抛出了野指针异常（如图三所示）。
+
+![](https://github.com/awesome-tips/iOS-Tips/blob/master/images/2019/01/7-3.jpg)
+
+然后去 github 上搜了一下“`assign dispatch_queue_t`”，发现很多代码也是使用这种错误的写法，所以觉得有必要写个 tip，提醒一下大家。
+
+
+
+
+
+关于UIStackView的一个小知识点
+----------
+**作者**: [高老师很忙](https://weibo.com/517082456)
+
+今天分享一个`UIStackView`的小知识点,用`UIStackView`做水平或垂直布局很方便，搜了大多数UIStackView的资料，大多是教大家如何使用的axis、alignment等属性的。最近使用时遇到了：把`UIStackView`中某个视图`hidden`后，`UIStackView`的布局会进行更新，只展示没有`hidden`的视图（官方文档截图：图1），
+
+![](https://github.com/awesome-tips/iOS-Tips/blob/master/images/2018/12/3-1.png)
+
+例如，你有5个视图平等分显示，设置某个视图`hidden`之后，就会变成4个视图平等分了。
+
+有的时候这是我们期许的，而有的时候并不是；如果`hidden`某个视图后，不想更改其他视图布局，那么可以设置alpha，或者使用`Masonry`的方法，之前小集也提过（图2）。
+
+![](https://github.com/awesome-tips/iOS-Tips/blob/master/images/2018/12/3-2.png)
+
+了解这个属性之后，免得大家开发过程走弯路，根据情况选择适当的方式布局。
+
