--- a/2019/目录.md
+++ b/2019/目录.md
@@ -6,3 +6,7 @@
 * [2. 在 UILabel 中渲染 HTML 【南峰子】](https://github.com/southpeak/iOS-tech-set/blob/master/2019/01.md#%E5%9C%A8-uilabel-%E4%B8%AD%E6%B8%B2%E6%9F%93-html)
 * [3. iOS App 异常捕获相互覆盖问题 【KANGZUBIN】](https://github.com/southpeak/iOS-tech-set/blob/master/2019/01.md#ios-app-%E5%BC%82%E5%B8%B8%E6%8D%95%E8%8E%B7%E7%9B%B8%E4%BA%92%E8%A6%86%E7%9B%96%E9%97%AE%E9%A2%98)
 * [4. Aspects hook 类方法的正确姿势  【Vong】](https://github.com/southpeak/iOS-tech-set/blob/master/2019/01.md#aspects-hook-%E7%B1%BB%E6%96%B9%E6%B3%95%E7%9A%84%E6%AD%A3%E7%A1%AE%E5%A7%BF%E5%8A%BF-)
+* [5. This block declaration is not a prototype 编译警告处理 【南峰子】](https://github.com/southpeak/iOS-tech-set/blob/master/2019/01.md#this-block-declaration-is-not-a-prototype-%E7%BC%96%E8%AF%91%E8%AD%A6%E5%91%8A%E5%A4%84%E7%90%86)
+* [6. Framework 中混合编程时 umbrella header 设置注意事项 【南峰子】](https://github.com/southpeak/iOS-tech-set/blob/master/2019/01.md#framework-%E4%B8%AD%E6%B7%B7%E5%90%88%E7%BC%96%E7%A8%8B%E6%97%B6-umbrella-header-%E8%AE%BE%E7%BD%AE%E6%B3%A8%E6%84%8F%E4%BA%8B%E9%A1%B9)
+* [7. 关于UIStackView的一个小知识点 【高老师很忙】](https://github.com/southpeak/iOS-tech-set/blob/master/2019/01.md#%E5%85%B3%E4%BA%8Euistackview%E7%9A%84%E4%B8%80%E4%B8%AA%E5%B0%8F%E7%9F%A5%E8%AF%86%E7%82%B9)
+* [8. Xcode更新输入账号密码，账号却不是自己的 【Lefe】](https://github.com/southpeak/iOS-tech-set/blob/master/2019/01.md#xcode%E6%9B%B4%E6%96%B0%E8%BE%93%E5%85%A5%E8%B4%A6%E5%8F%B7%E5%AF%86%E7%A0%81%EF%BC%8C%E8%B4%A6%E5%8F%B7%E5%8D%B4%E4%B8%8D%E6%98%AF%E8%87%AA%E5%B7%B1%E7%9A%84)
