--- a/2019/01.md
+++ b/2019/01.md
@@ -253,3 +253,213 @@ This block declaration is not a prototype
 
 了解这个属性之后，免得大家开发过程走弯路，根据情况选择适当的方式布局。
 
+
+
+Command Not Found
+----------
+**作者**: [Lefe_x](https://weibo.com/u/5953150140)
+
+使用终端命令的时候常会出现`Command Not Found`这个错误，我们今天聊一聊这个错误出现的基本原因，出现这个问题一般因为下面4种原因；
+
+- 输入命令时语法错误，命令行有语法规则，必须按语法规则写；
+- 命令并没有安装，有时候安装的时候忽略了错误；
+- 命令被删除或破坏了；
+- 用户的 `$PATH` 不正确，大部分原因都是这个导致的；
+
+出现前三种错误都比较好解决，第四中错误比较常见，有时候明明安装完成了，却还会报这个错误。命令行程序之所以可以执行是因为它本身是一个可执行程序或者是一个脚本。当在终端中输入命令的时候，操作系统会找对应的可执行文件并执行。操作系统会从环境变量`$PATH`中依次查找可执行文件，直到找到，如果找不到将报 `Command Not Found` 这个错误。
+
+查看我电脑的环境变量  `$PATH` 中包含了（每个路径通过冒号分割）：
+
+```
+➜  ~ echo $PATH
+/opt/MonkeyDev/bin:/Library/Frameworks/Python.framework/Versions/3.7/bin:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin
+```
+
+如果报 `Command Not Found` 这个错误，首先通过`echo $PATH`查看环境变量中是否已经存在了可执行文件的路径。如果没有打开`.bash_profile`把可执行文件地绝对路径写进去即可。
+
+```
+➜ vi $HOME/.bash_profile
+export PATH="$HOME/Library/Android/flutter/bin:$PATH"
+
+// 想让刚配置的 PATH 生效，需要刷新终端
+➜  source $HOME/.bash_profile
+```
+
+
+
+针对 objc_exception_throw 的实用调试技巧
+--------
+**作者**: [Vong_HUST](https://weibo.com/VongLo)
+
+相信调试过程中发生崩溃这种事情，大家肯定都遇到过，一般也会给 Xcode 设一个全局共享的异常断点，如图1所示，（如果没有的话，可以设置一波）。当我们调试遇到抛出异常时，Xcode 会自动断点，输出一些关于 Exception 的日志信息。但是有些时候并不见得会输出有用的日志（或者压根就没有日志）只有对应的崩溃栈，如图2所示。
+
+示例中向 NSArray 发了一条无法响应的消息，崩溃后 Xcode 自动断点到了相应的断点位置（这里其实 Xcode 已经在 console 中输入了对应的崩溃信息，因为一时半会不知道该怎么制造 Xcode 不输出日志的环境，所以将就用这个示例来代替下），同时左边也有了对应的崩溃调用栈。我们可以将调用栈切到最上方的 objc_exception_throw，然后在 console 中输入 po $arg1，因为 arg1 代表的是对象本身，在这里就是 NSException，而它又复写了 description 方法，所以对其 print 输出的是对应的崩溃信息。
+
+以上其实我们还可以节省一个步骤，就是编辑一下这个全局异常端点，给起加一个 Debugger Command 的 Action，如图3所示，这样就可以在发生 objc_exception_throw 崩溃的时候，就可以自动输出对应的崩溃信息了，而不用再手动切换到栈顶的 objc_exception_throw 再输一遍 po $arg1。需要明确一点的是，这种方式仅适用于 objc_exception_throw 类型的崩溃（模拟器、真机都适用）。
+
+其他几个有意思的参数值，上面说到 arg1 是当前断点所在方法的接收对象，arg2 是被调用的方法名（在 po 的时候要做一个强转，如 po (SEL)$arg2)，如果有参数则 arg 依次递增。
+
+另外 lldb 的其它更多命令及便捷或扩展的方式，推荐 Facebook 的 [Chisel](https://github.com/facebook/chisel)
+个人使用频率最高的就是真机调试动画，放慢动画速度的命令，运行过程中触发任意一个断点，执行 slowanim 即可（默认10倍速慢放，可自行在后面指定慢放倍数，如 slowanim 0.2 就是慢放5倍）。
+
+如果你有更多的小技巧欢迎分享，欢迎交流~
+
+![](https://github.com/awesome-tips/iOS-Tips/blob/master/images/2019/01/9-1.gif)
+![](https://github.com/awesome-tips/iOS-Tips/blob/master/images/2019/01/9-2.jpg)
+![](https://github.com/awesome-tips/iOS-Tips/blob/master/images/2019/01/9-3.jpg)
+
+参考链接：[Xcode: One Weird Debugging Trick That Will Save Your Life](https://www.natashatherobot.com/xcode-debugging-trick/)
+
+
+
+
+
+
+
+Xcode 工程设置构建版本号自动递增
+--------
+**作者**: [KANGZUBIN](https://weibo.com/kangzubin)
+
+在一个 iOS 工程中，通常有两种“版本号”，即 `Version` 和 `Build`，如图 1 所示：
+
+![](https://github.com/awesome-tips/iOS-Tips/blob/master/images/2019/01/8-1.jpg)
+
+* **Version** 为发布版本号，标识应用程序发布的正式版本号，通常为两段式或者三段式，例如：`1.2.1`、`1.0` 等，其 Key 为 `CFBundleShortVersionString`，在 Info.plist 文件中对应 "Bundle versions string, short"；
+
+* **Build** 为构建版本号，标识应用程序构建（编译）的内部版本号，可以有多种方法表示：时间表示（e.g. "20190122080211"）、字母表示（e.g "ABC"）、以及**递增的数字**（e.g. "100"）等。它一般不对外公开，在开发团队内部使用。其 Key 为 `CFBundleVersion`，在 Info.plist 文件中对应 "Bundle version"；
+
+在 App Store 发布应用时，使用的是 “Version” 版本号，在同一个 “Version” 号下， 开发者可以上传不同 “Build” 构建版本。此外，对于 “Build” 号，我们最常使用 “递增的数字” 来表示。
+
+同时，苹果为我们提供了一个 `agvtool` 命令行工具，用于自动增加版本号，具体使用方式如下：
+
+首先，在 Build Settings 配置项中，设置 `Current Project Version` 为选定的值，例如 `100`（可以为整数或浮点数，新工程一般设为 `1`），`agvtool` 命令会根据这个值来递增 “Build” 号。另外需要再选择 `Versioning System` 的值为 `Apple Generic`，如图 2 所示。
+
+![](https://github.com/awesome-tips/iOS-Tips/blob/master/images/2019/01/8-3.jpg)
+
+然后，在 Build Phases 中，点击 “+” 号，选择 “New Run Script Phase” 添加一个执行脚本，并设置以下脚本代码，如图 3 所示：
+
+>xcrun agvtool next-version -all
+
+![](https://github.com/awesome-tips/iOS-Tips/blob/master/images/2019/01/8-2.jpg)
+
+以上，我们在每次编译工程时，“Build” 号就会自动递增加 1 了。
+
+关于 `agvtool` 命令的更多使用方式，可以参考[这里](https://segmentfault.com/a/1190000004678950)。
+
+最后，上述配置在多人开发或者多分支开发时，可能会导致 “Build” 号冲突，因此，我们可以只在日常给测试人员打包的机器上配置就好了。
+
+
+Swift 中实现 synchronized
+--------
+**作者**: [南峰子](https://weibo.com/3321824014)
+
+Objective-C 中的 `@synchronized` 大家都应该很熟悉，用来对一段代码块加锁。不过在 Swift 中没有提供对应的关键字执行相同的操作。所以如果要使用类似的 `synchronized`，则需要自己动手。
+
+以下是 `RxSwift` 中的实现方式：
+
+```c
+extension Reactive where Base: AnyObject {
+    func synchronized<T>(_ action: () -> T) -> T {
+        objc_sync_enter(self.base)
+        let result = action()
+        objc_sync_exit(self.base)
+        return result
+    }
+}
+```
+
+可以看到是通过 `objc_sync_enter` 和 `objc_sync_exit` 来对代码块加锁。而实际上 Objective-C 中的 `@synchronized` 也是基于这两个函数来实现的。如果有兴趣，可以查看一下[源代码](https://github.com/gcc-mirror/gcc/blob/master/libobjc/objc/objc-sync.h)
+
+#### 参考链接
+
+* [关于 @synchronized，这儿比你想知道的还要多](http://yulingtianxia.com/blog/2015/11/01/More-than-you-want-to-know-about-synchronized/)
+* [LOCK](https://swifter.tips/lock/)
+
+
+
+点击cell不执行-[UITableView didSelectRowAtIndexPath:]方法的几种方式
+----------
+**作者**: [高老师很忙](https://weibo.com/517082456)
+
+今天分享一个比较常用的知识点，点击某个UITableViewCell不执行`-[UITableView didSelectRowAtIndexPath:]`方法的几种方式：
+
+- 可以直接设置`cell.userInteractionEnabled = NO`；
+	
+- 可以实现UITableViewDelegate中的`-[UITableView shouldHighlightRowAtIndexPath:]`方法，设置对应indexPath返回NO；
+
+![](https://github.com/awesome-tips/iOS-Tips/blob/master/images/2019/01/10-1.jpg)
+	
+- 可以实现UITableViewDelegate中的`-[UITableView willSelectRowAtIndexPath:]`方法，设置对应indexPath返回nil，不过这种方式cell还是会有高亮效果，需要手动设置对应`cell.selectionStyle = UITableViewCellSelectionStyleNone`；
+	
+以上三个方法，都不会进UITableViewDelegate的`-[UITableView didSelectRowAtIndexPath:]`方法。用第一种方式设置后，cell上的所有子View都不能被点击了；而第二种方式不会影响cell的子View的响应事件的传递，如果cell上有UIControl的子类，依然可以被点击；第三种方式也不会影响cell的子视图的响应事件，但是需要额外设置不显示高亮效果。当然，你也可以在`-[UITableView didSelectRowAtIndexPath:]`方法的对应indexPath直接return，只要你高兴😂，可以根据实际情况选择合适的方法。
+
+有更优雅的方式，欢迎一起讨论。
+
+
+
+
+
+NSScanner 过滤字符串
+-------
+**作者**: [这个汤圆没有馅](https://weibo.com/u/6603469503)
+
+在使用`<ContactsUI/ContactsUI.h>`框架获取通讯录手机号码时，不同的 iOS 系统最后得到的手机号码也不同。有的是`xxx-xxxx-xxxx`，有的是 `xxx xxxx xxxx`。为了得到有效的手机号码，可以用正则过滤字符串。如以下代码。
+
+```
+NSMutableString *mobile = [NSMutableString stringWithString:@"131-0000-2222"];
+NSMutableString *phone = [NSMutableString string];
+for(int i =0; i < [mobile length]; i++) {
+    NSString *temp = [mobile substringWithRange:NSMakeRange(i,1)];
+    NSString *regex = @"^[0-9]+$";
+    NSPredicate *pred = [NSPredicate predicateWithFormat:@"SELF MATCHES %@", regex];
+    if ([pred evaluateWithObject:temp]) {
+       [phone appendString:temp];
+    }
+}
+```
+
+除了正则外，今天要介绍的是`NSScanner `过滤器。先看一下 apple 文档里对 NSScanner 的说明。【一个字符串解析器，用于扫描字符集中的子字符或字符，以及十进制、十六进制和浮点表示形式的数值。】
+![](https://github.com/awesome-tips/iOS-Tips/blob/master/images/2019/01/10-1.jpg)
+
+
+常用属性有以下几个：
+
+`charactersToBeSkipped`，设置忽略指定字符，默认是空格和回车。
+
+`isAtEnd`，是否扫描结束。
+
+`scanLocation`，扫描开始的位置。
+
+用 `NSScanner` 扫描字符串得到有效的手机号码，代码如下：
+```
+NSString *originalStr = @"131-0000-2222";
+NSMutableString *stripStr = [NSMutableString stringWithCapacity:originalStr.length];
+NSScanner *scanner = [NSScanner scannerWithString:originalStr];
+NSCharacterSet *numbers = [NSCharacterSet characterSetWithCharactersInString:@"0123456789"];
+while ([scanner isAtEnd] == NO) {
+    NSString *buffer;
+    if ([scanner scanCharactersFromSet:numbers intoString:&buffer]) {
+        [stripStr appendString:buffer];
+    } else {
+        [scanner setScanLocation:[scanner scanLocation] + 1];
+    }
+}
+```
+
+平时我们用的条件判断一般以 `if` 或 `正则表达式` 居多，`NSScanner` 其实也是一个陌生且又强大的条件判断器。
+
+如有表述不当，欢迎指出~~
+
+
+聊聊 iPad 适配
+--------
+**作者**: [halohily](https://weibo.com/halohily)
+
+在最新版本中，我们为网易有道词典做了完全的 iPad 适配，你可以在 iPad 上横屏、分屏使用有道词典，也完全支持了屏幕旋转后的 UI 调整。今天来聊聊这次的适配体验。
+
+千言万语总结成一句话：如果你正确使用了 `autolayout`（使用比例而非固定值），那么即使是原本仅支持竖屏的页面，在打开转屏开关后，页面也不会有太大的问题。况且苹果已经提升了 `autolayout` 的性能，所以如果你的 app 未来有支持 iPad 的潜在可能，那么尽可能地全部使用 `autolayout` 来布局吧。
+
+如果现有的大量页面都已经使用了计算 `frame` 的方式来布局，也有解决办法。`UIView` 的子类 要保证在 `layoutSubviews` 方法内进行布局（根据 self 宽高而不是屏幕或 window 尺寸），这本来也是一个标准做法。对于 `ViewController`，系统提供了 `viewWillLayoutSubviews` 方法，类似于 `layoutSubviews`方法，你可以在这里进行 `vc.view` 及其子 `view` 的布局。在转屏、分屏后这些方法都会被触发。
+
+需要注意的是，iPad 上不仅有旋转屏幕的操作，还有分屏的操作，系统也提供了进入分屏的系统通知，如果需要可以进行监听。比如大多数拍照 app 会在进入分屏后为用户弹一个分屏无法拍照的 `alert`。
+
